AR-1726 Clean up the subjects landing page: - hide the 'used within' section - change terms section to an accordion - add published external documents accordion as per CH design - Fix 'More about' label not showing display_string

--- a/public-new/app/assets/stylesheets/archivesspace/aspace.scss
+++ b/public-new/app/assets/stylesheets/archivesspace/aspace.scss
@@ -743,6 +743,14 @@ span.head {
 	    margin-top: rem-calc(20);
 }
 
+#sidebar .acc_button {
+  display: none;
+}
+
+#sidebar .present_list {
+  padding-left: 10px
+}
+
 .sorter {
 	margin-top: 20px;  
 }
